--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +15,42 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@keyframes shake {
+  0%, 100% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-2px);
+  }
+  50% {
+    transform: translateX(2px);
+  }
+  75% {
+    transform: translateX(-2px);
+  }
+}
+
+@keyframes shadow {
+  0%, 100% {
+    box-shadow: 0 0 0 0 #1F51FF;
+  }
+  25% {
+    box-shadow: 0 0 200px 30px #1F51FF;
+  }
+  50% {
+    box-shadow: 0 0 50px 10px #1F51FF;
+  }
+  75% {
+    box-shadow: 0 0 10px 5px #1F51FF;
+  }
+}
+
+.animate-shake {
+  animation: shake 0.3s ease-in-out;
+}
+.animate-shadow {
+  animation: shadow 0.6s ease-in-out;
+}
+
+
